# SAMMD

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: project-scope.md  requirements.txt
docs/reviewer/: pr2-drop-in-replacement-audit.md  pr2-follow-up-issues.md
docs/source/: conf.py  index.rst  student-start-here.rst
docs/source/_static/: custom.css
docs/source/_templates/sidebar/: brand.html
docs/source/contributor/: developer-guide.rst
docs/source/explanation/: project-scope.rst  scientific-assumptions.rst
docs/source/reference/: api.rst  build-contract.rst
docs/source/tutorials/: canonical-workflow.rst  installation.rst  openmm-simulation.rst  yaml-configuration.rst
examples/: canonical_openmm_workflow.py  student_config.yaml
notebooks/: building_systems_with_sammd.ipynb  canonical_workflow.ipynb  openmm_from_sammd.ipynb  student_openmm_workflow.ipynb
src/sammd/: __init__.py  _openmm_backend.py  _openmm_templates.py  analysis.py  builders.py  cli.py  colors.py  config.py  forcefields.py  geometry.py  interchange_backend.py  io.py  openff.py  openmm_build.py  openmm_runtime.py  packmol.py  reporting.py  sam.py  solvation.py  surfaces.py  topology.py  validation.py  workflow.py
src/sammd/analysis/: __init__.py  orientation.py
src/sammd/backends/: __init__.py  forcefields.py  interchange.py  interchange_plugins.py  openff.py  openmm_runtime.py  packmol.py
src/sammd/core/: __init__.py  builders.py  config.py  io.py  validation.py
src/sammd/data/: __init__.py  interface_fcc_metals.offxml
src/sammd/model/: __init__.py  metal_sulfur.py  sam.py  solvation.py  surfaces.py
src/sammd/runtime/: __init__.py  reporting.py
src/sammd/utils/: geometry.py
temporary/: README.md  openmm_smoke.py  test_openmm_smoke_tool.py
tests/: test_analysis.py  test_builders.py  test_cli.py  test_colors.py  test_config.py  test_docs_artifacts.py  test_documentation.py  test_forcefields.py  test_geometry.py  test_interchange_backend.py  test_interchange_plugins.py  test_io.py  test_openff.py  test_openmm_backend.py  test_openmm_build.py  test_openmm_runtime.py  test_openmm_smoke.py  test_openmm_smoke_tool.py  test_packmol.py  test_public_api.py  test_reporting.py  test_sam.py  test_solvation.py  test_surfaces.py  test_topology.py  test_validation.py  test_workflow.py
tools/: openmm_smoke.py
