[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sammd"
version = "0.1.0"
description = "Configuration-first scaffolding for self-assembled monolayer MD systems."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "SAMMD contributors" },
]
dependencies = [
  "click>=8.1",
  "pydantic>=2",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.8",
]

[project.scripts]
sammd = "sammd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sammd"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
