[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sammd"
version = "0.1.0"
description = "SAMMD: Self-Assembled Monolayers studied with Molecular Dynamics"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Joseph R. Laforet Jr." },
]
dependencies = [
  "click>=8.1",
  "pydantic>=2",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.8",
]
docs = [
  "furo>=2024.8.6",
  "myst-parser>=4",
  "sphinx>=8",
  "sphinx-copybutton>=0.5",
]

[project.scripts]
sammd = "sammd.cli:main"

[project.entry-points."openff.interchange.plugins.collections"]
SAMMDMetalSulfurLJCollection = "sammd.backends.interchange_plugins:SAMMDMetalSulfurLJCollection"

[tool.hatch.build.targets.wheel]
packages = ["src/sammd"]

[tool.hatch.build.targets.sdist]
exclude = ["/temporary"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["sammd"]
omit = [
  "docs/*",
  "notebooks/*",
  "tests/*",
  "src/sammd/interchange_backend.py",
  "src/sammd/backends/interchange.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
